<?xml version="1.0" encoding="UTF-8"?>
<!--
        Copyright 2008-2009 The Kuali Foundation Licensed under the
        Educational Community License, Version 2.0 (the "License"); you may
        not use this file except in compliance with the License. You may
        obtain a copy of the License at
        http://www.opensource.org/licenses/ecl2.php Unless required by
        applicable law or agreed to in writing, software distributed under the
        License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
        CONDITIONS OF ANY KIND, either express or implied. See the License for
        the specific language governing permissions and limitations under the
        License.
    -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.kuali.kpme</groupId>
    <artifactId>time-and-attendance</artifactId>
    <packaging>war</packaging>
    <name>KPME Time and Attendance</name>
    <description>KPME Time and Attendance</description>
 	<url>http://kuali.org/kpme</url>
	<organization>
		<name>The Kuali Foundation</name>
		<url>http://kuali.org</url>
	</organization>

   <version>1.1-SNAPSHOT</version>

    <licenses>
		<license>
			<name>The Kuali Foundation Educational Community License 2.0</name>
			<url>http://www.opensource.org/licenses/ecl2.txt</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<surefire.plugin.version>2.9</surefire.plugin.version>
        <maven.compiler.version>2.3.2</maven.compiler.version>
        <rice.version>1.0.3</rice.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty</artifactId>
            <version>6.1.25</version>
        </dependency>
        <dependency>
            <groupId>org.kuali.rice</groupId>
            <artifactId>rice-api</artifactId>
            <version>${rice.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>htmlunit</groupId>
                    <artifactId>htmlunit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kuali.rice</groupId>
            <artifactId>rice-impl</artifactId>
            <version>${rice.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>htmlunit</groupId>
                    <artifactId>htmlunit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.5</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <version>2.0.8</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-mock</artifactId>
            <version>2.0.8</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.htmlunit</groupId>
            <artifactId>htmlunit</artifactId>
            <version>2.7</version>
        </dependency>
        <dependency>
            <groupId>com.thoughtworks.xstream</groupId>
            <artifactId>xstream</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.nekohtml</groupId>
            <artifactId>nekohtml</artifactId>
            <version>1.9.14</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>2.0b3</version>
            <!--<scope>test</scope>-->
        </dependency>
        <dependency>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>selenium-maven-plugin</artifactId>
            <version>2.0</version>
            <type>maven-plugin</type>
            <!--<scope>test</scope>-->
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>p6spy</groupId>
            <artifactId>p6spy</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>displaytag</groupId>
            <artifactId>displaytag</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
      		<groupId>com.google.code.gson</groupId>
      		<artifactId>gson</artifactId>
      		<version>1.7.1</version>
      		<scope>compile</scope>
    	</dependency>
        <dependency>
            <groupId>displaytag</groupId>
            <artifactId>displaytag-export-poi</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>10.0.1</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-maven-plugin</artifactId>
                <version>2.0.5</version>
                <configuration>
                    <changeLogFile>src/main/resources/db.changelog.xml</changeLogFile>
                    <verbose>true</verbose>
                </configuration>
                <executions>
                    <execution>
                        <id>rice-database-load</id>
	                    <phase>process-resources</phase>
	                    <goals>
	                        <goal>update</goal>
	                    </goals>
                        <configuration>
                            <driver>${kr.dataSource.driver}</driver>
                            <url>${kr.dataSource.jdbcUrl}</url>
                            <username>${kr.dataSource.username}</username>
                            <password>${kr.dataSource.password}</password>
                            <dropFirst>${kr.dataSource.dropFirst}</dropFirst>
                            <contexts>${kr.dataSource.contexts}</contexts>
	                    </configuration>
	                </execution>
                    <execution>
                        <id>kpme-database-load</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>update</goal>
                        </goals>
                        <configuration>
                            <driver>${kpme.dataSource.driver}</driver>
                            <url>${kpme.dataSource.jdbcUrl}</url>
                            <username>${kpme.dataSource.username}</username>
                            <password>${kpme.dataSource.password}</password>
                            <dropFirst>${kpme.dataSource.dropFirst}</dropFirst>
                            <contexts>${kpme.dataSource.contexts}</contexts>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
                <configuration>
                    <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=512m</argLine>
                </configuration>
                <executions>
                    <execution>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <skip>false</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <projectNameTemplate>[artifactId]-[version]</projectNameTemplate>
                    <wtpmanifest>true</wtpmanifest>
                    <wtpapplicationxml>true</wtpapplicationxml>
                    <wtpversion>2.0</wtpversion>
                    <wtpContextName>tk-dev</wtpContextName>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1-alpha-2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.0</version>
                <configuration>
                    <tagBase>https://svn.kuali.org/repos/kpme/tags</tagBase>
                </configuration>
            </plugin>
        </plugins>
        
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.liquibase</groupId>
                                        <artifactId>liquibase-maven-plugin</artifactId>
                                        <versionRange>[2.0-rc3,)</versionRange>
                                        <goals>
                                            <goal>update</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore />
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-dependency-plugin</artifactId>
                                        <versionRange>[2.0-alpha1,)</versionRange>
                                        <goals>
                                            <goal>copy</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>kpme-main</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>   
                <kr.dataSource.driver>com.mysql.jdbc.Driver</kr.dataSource.driver>
                <kr.dataSource.jdbcUrl>jdbc:mysql://localhost:3306/krtt</kr.dataSource.jdbcUrl>
                <kr.dataSource.database>krtt</kr.dataSource.database>
                <kr.dataSource.username>krtt</kr.dataSource.username>
                <kr.dataSource.password>krtt</kr.dataSource.password>
                <kr.dataSource.dropFirst>false</kr.dataSource.dropFirst>
                <kr.dataSource.contexts>rice-server-bootstrap,kpme-server-bootstrap,kpme-server-staging</kr.dataSource.contexts>
            
                <kpme.dataSource.driver>com.mysql.jdbc.Driver</kpme.dataSource.driver>
                <kpme.dataSource.jdbcUrl>jdbc:mysql://localhost:3306/tk</kpme.dataSource.jdbcUrl>
                <kpme.dataSource.database>tk</kpme.dataSource.database>
                <kpme.dataSource.username>tk</kpme.dataSource.username>
                <kpme.dataSource.password>tk_tk_tk</kpme.dataSource.password>
                <kpme.dataSource.dropFirst>false</kpme.dataSource.dropFirst>
                <kpme.dataSource.contexts>rice-client-bootstrap,kpme-client-bootstrap,kpme-client-staging</kpme.dataSource.contexts>
            </properties>
        </profile>
        <profile>
            <id>kpme-test</id>
            <properties>
                <kr.dataSource.driver>com.mysql.jdbc.Driver</kr.dataSource.driver>
                <kr.dataSource.jdbcUrl>jdbc:mysql://localhost:3306/krtt</kr.dataSource.jdbcUrl>
                <kr.dataSource.database>krtt</kr.dataSource.database>
                <kr.dataSource.username>krtt</kr.dataSource.username>
                <kr.dataSource.password>krtt</kr.dataSource.password>
                <kr.dataSource.dropFirst>false</kr.dataSource.dropFirst>
                <kr.dataSource.contexts>rice-server-bootstrap,kpme-server-bootstrap,kpme-server-staging</kr.dataSource.contexts>
                
                <kpme.dataSource.driver>com.mysql.jdbc.Driver</kpme.dataSource.driver>
                <kpme.dataSource.jdbcUrl>jdbc:mysql://localhost:3306/tk-test</kpme.dataSource.jdbcUrl>
                <kpme.dataSource.database>tk-test</kpme.dataSource.database>
                <kpme.dataSource.username>tk</kpme.dataSource.username>
                <kpme.dataSource.password>tk_tk_tk</kpme.dataSource.password>
                <kpme.dataSource.dropFirst>true</kpme.dataSource.dropFirst>
                <kpme.dataSource.contexts>rice-client-bootstrap,kpme-client-bootstrap,kpme-client-test</kpme.dataSource.contexts>
            </properties>
        </profile>
        
        <profile>
            <id>server-embedded</id>
            <build>
                <plugins>
		            <plugin>
		                <groupId>org.apache.maven.plugins</groupId>
		                <artifactId>maven-dependency-plugin</artifactId>
		                <version>2.1</version>
		                <executions>
		                    <execution>
		                        <id>copy-rice-web</id>
		                        <phase>generate-sources</phase>
		                        <goals>
		                            <goal>copy</goal>
		                        </goals>
		                        <configuration>
		                            <artifactItems>
		                                <artifactItem>
		                                    <groupId>org.kuali.rice</groupId>
		                                    <artifactId>rice-web</artifactId>
		                                    <version>${rice.version}</version>
		                                    <type>war</type>
		                                    <overWrite>false</overWrite>
		                                    <outputDirectory>${project.build.directory}</outputDirectory>
		                                </artifactItem>
		                            </artifactItems>
		                        </configuration>
		                    </execution>
		                </executions>
		            </plugin>
		        </plugins>
		    </build>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>kuali.nexus</id>
            <name>Nexus Repository Manager</name>
            <url>http://nexus.kuali.org/content/groups/public</url>
            <releases>
                    <enabled>true</enabled>
            </releases>
            <snapshots>
                    <enabled>true</enabled>
            </snapshots>
        </repository>
		<repository>
			<id>kuali</id>
			<name>Kuali Repository</name>
			<url>https://test.kuali.org/maven</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
        <repository>
            <id>nexus</id>
            <name>Nexus Repository</name>
            <url>http://nexus.openqa.org/content/repositories/releases</url>
        </repository>
    </repositories>

    <scm>
		<connection>scm:svn:http://svn.kuali.org/repos/kpme/trunk</connection>
		<developerConnection>scm:svn:https://svn.kuali.org/repos/kpme/trunk</developerConnection>
        <url>http://fisheye.kuali.org/browse/kpme</url>
	</scm>

	<issueManagement>
		<system>Jira</system>
		<url>https://test.kuali.org/jira/</url>
	</issueManagement>

</project>